2006-11-17  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_5L.xml: Added unprintable margin information.

2006-11-16  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Samsung-CLP-300.xml, printer/Samsung-CLP-500.xml,
	  printer/Samsung-CLP-510.xml, printer/Samsung-CLP-600.xml:
	  driver/splix.xml: Added Samsung's cheap color laser printers and
	  updated "splix" driver entry, as "splix" supports these printers
	  now.

	* printer/HP-LaserJet_3200.xml: Changed recommended driver to
	  "pxlmono", updated text.

	* printer/HP-2000C.xml, printer/HP-2500CM.xml,
	  printer/HP-2500C.xml, printer/HP-2563.xml,
	  printer/HP-Business_Inkjet_1000.xml,
	  printer/HP-Business_Inkjet_1100.xml,
	  printer/HP-Business_Inkjet_1200.xml,
	  printer/HP-Business_Inkjet_2200.xml,
	  printer/HP-Business_Inkjet_2230.xml,
	  printer/HP-Business_Inkjet_2250TN.xml,
	  printer/HP-Business_Inkjet_2250.xml,
	  printer/HP-Business_Inkjet_2280.xml,
	  printer/HP-Business_Inkjet_2300.xml,
	  printer/HP-Business_Inkjet_2600.xml,
	  printer/HP-Business_Inkjet_2800.xml,
	  printer/HP-Business_Inkjet_3000.xml,
	  printer/HP-Color_Inkjet_Printer_CP1160.xml,
	  printer/HP-Color_Inkjet_Printer_CP1700.xml,
	  printer/HP-Color_LaserJet_2500.xml,
	  printer/HP-Color_LaserJet_2550.xml,
	  printer/HP-Color_LaserJet_2605.xml,
	  printer/HP-Color_LaserJet_2800.xml,
	  printer/HP-Color_LaserJet_3000.xml,
	  printer/HP-Color_LaserJet_3500.xml,
	  printer/HP-Color_LaserJet_3550.xml,
	  printer/HP-Color_LaserJet_3600.xml,
	  printer/HP-Color_LaserJet_3700.xml,
	  printer/HP-Color_LaserJet_3800.xml,
	  printer/HP-Color_LaserJet_4500.xml,
	  printer/HP-Color_LaserJet_4550.xml,
	  printer/HP-Color_LaserJet_4600.xml,
	  printer/HP-Color_LaserJet_4610.xml,
	  printer/HP-Color_LaserJet_4650.xml,
	  printer/HP-Color_LaserJet_4700.xml,
	  printer/HP-Color_LaserJet_4730_MFP.xml,
	  printer/HP-Color_LaserJet_5000.xml,
	  printer/HP-Color_LaserJet_5500.xml,
	  printer/HP-Color_LaserJet_5550.xml,