@@ -26,7 +26,7 @@
   <autodetect>
   <!--no known parport probe information--></autodetect>
   <functionality>A</functionality>
-  <driver>pxlmono</driver>
+  <driver>ljet4</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
@@ -40,6 +40,10 @@
     work necessarily with all Linux distributions. You will therefore
     probably get it more easily working by using standard PCL drivers
     as "pxlmono" or "hpijs".&lt;p&gt;
+
+    &lt;a href="https://launchpad.net/bugs/70425"&gt;"pxlmono"
+    (PCL-6/XL) leads sometimes to problems&lt;/a&gt;, therefore we
+    recommend "ljet4" (PCL 5e) for this printer.&lt;p&gt;
 
     </en>
   </comments>
