@@ -1,3 +1,9 @@
+2006-11-20  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Samsung-ML-1750.xml: Switched recommended driver from
+	  "pxlmono" to "ljet4", text update
+	   (https://launchpad.net/bugs/70425).
+
 2006-11-17  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/HP-LaserJet_5L.xml: Added unprintable margin information.
